<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_registration"
                    android:textSize="25sp"
                    android:textColor="@color/Black"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textEmailReg"/>

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    android:layout_below="@+id/textEmailReg" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:layout_below="@+id/input_username" />

                <EditText
                    android:id="@+id/input_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_confirm_password"
                    android:layout_marginTop="20dp"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:autofillHints="@string/full_name" />

                <EditText
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_full_name"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/input_number_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_phone_number"
                    android:layout_marginTop="20dp"
                    android:hint="@string/number_plate"
                    android:inputType="text|textEmailAddress|textPersonName|number" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:layout_below="@+id/input_password"/>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/input_number_plate"
                    android:text="@string/register"
                    android:background="@color/blue2"/>

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>