<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/White">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/White"
        android:weightSum="100"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

        </android.support.v7.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:id="@+id/map_container">


        <com.google.android.gms.maps.MapView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/user_list_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />


        <android.support.v7.widget.CardView
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:cardElevation="10dp"
            android:paddingBottom="4dp"
            android:layout_marginRight="10dp"
            android:id="@+id/rel_layout">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_search_black_24dp" />

            <AutoCompleteTextView
                android:id="@+id/txt_edit"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/enter_address_city_or_zip_code"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/gps_pin"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rel_layout"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:elevation="10dp"
            android:background="@color/White"
            android:contentDescription="@string/ping"
            android:src="@drawable/ic_gps_fixed_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/info_pin"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="4dp"
            android:elevation="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/rel_layout"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/White"
            android:contentDescription="@string/pinging_there"
            android:src="@drawable/ic_info_black_24dp" />

        <ImageView
            android:id="@+id/places_pic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/info_pin"
            android:background="@color/White"
            android:elevation="10dp"
            android:padding="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/places_pick"
            android:src="@drawable/ic_map_black_24dp" />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@color/White"
            android:layout_marginRight="10dp"
            android:padding="4dp"
            android:elevation="10dp"
            android:layout_below="@id/gps_pin"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/places_pick"
            android:src="@drawable/ic_refresh_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_full_screen_black_24dp"
            android:background="@color/White"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/refresh"
            android:elevation="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/btn_full_screen_map"/>

    </RelativeLayout>
    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>